--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "tencentcloud-im-sdk-nodejs-platform": "^1.0.1"
+    "tls-sig-api-v2": "^1.0.0" 
   }
 }
